--- a/src/App.css
+++ b/src/App.css
@@ -2,31 +2,542 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+:root {
+  --fontSize:large;
+  --b2pxso:2px solid red;
   }
-  to {
-    transform: rotate(360deg);
+  
+  * {
+  box-sizing:border-box;
+  margin:0px;
+  padding:0px;
   }
-}
+  
+  html,body{
+  position:relative;
+  background-color:green;
+  height:100%;
+  }
+  
+  table {
+  border-spacing:0px;
+  }
+  
+  td,th{
+  height:5%;
+  }
+  
+  #mainApp {
+  bottom:0px;
+  position:absolute;
+  width:100%;
+  height:100%;
+  background-color:gray;
+  }
+  
+  #tfiraOption {
+  background-color:orange;
+  font-size:large;
+  width:100%;
+  align-content:center;
+  }
+  
+  #userData{
+  position:absolute;
+  height:90%;
+  top:0%;
+  box-sizing:border-box;
+  display:flex;
+  flex-direction:column;
+  background-color:rgb(236, 227, 221);
+  justify-content:space-around;
+  overflow:auto;
+  width:100%;
+  }
+  
+  #userData th,#userData tr{
+      font-size: large;
+  }
+  
+  #sheeritSection {
+  width:100%;
+  height:90%;
+  position:relative;
+  top:0%;
+  display:none;
+  background-color:#999999;
+  overflow:auto;
+  }
+  
+  #sheeritTable td,
+  #sheeritTable th {
+  margin:0;
+  padding:2px;
+  border:1px solid red;
+  }
+  
+  #tfiraTable {
+  background-color:LightSlateGrey;
+  }
+  
+  #galilTable  {
+  background-color:LightGray;
+  }
+  
+  #volanSharvolTable {
+  background-color:LightGray;
+  }
+  
+  #sizeTable {
+  background-color:LightGray;
+  }
+  
+  #orehTable {
+  display:none;
+  background-color:Crimson;
+  position:relative;
+  top:0%;
+  width:100%;
+  height:90%;
+  overflow:auto;
+  }
+  
+  #saveOreh{
+  order:1;
+  }
+  
+  #restBtn{
+  order:4;
+  }
+  
+  td{
+  padding:2px
+  }
+  
+  th { 
+  padding:2px;
+  border-bottom:1px solid black;
+  }
+  
+  input {
+  width:100%;
+  font-size:var(--fontSize);
+  text-align:center;
+  margin:2px;
+  padding:3px;
+  }
+  
+  #userData td{
+  width:25%;
+  text-align: center;
+  }
+  
+  #userData table {
+  border:2px solid Azure;
+  }
+  
+  
+  .sher input{
+  height:15px;
+  width:15px;
+  }
+  
+  table {
+  border-collapse:collapse;
+  }
+  
+  #buttons{
+  display:flex;
+  position:absolute;
+  justify-content:space-around;
+  align-items:center;
+  bottom:0px;
+  background-color:orange;
+  width:100%;
+  height:10%;
+  }
+  
+  #hashebOreh {
+  background-color:Crimson;
+  order:3;
+  }
+  
+  #hashebSheeritBtn  {
+  background-color:Coral;
+  order:2;
+  }
+  
+  #showUserData  {
+  order:1;
+  background-color:blue;
+  }
+  
+  #buttons button{
+  color:white;
+  height:100%;
+  width:33%;
+  font-size:large;
+  }
+  
+  #OrehDiv{
+  position:absolute;
+  top:0px;
+  font-size:large;
+  background-color:azure;
+  width:66%;
+  height:75%;
+  overflow:scroll;
+  }
+  
+  #totalOrehDiv{
+  position:absolute;
+  bottom:20%;
+  width:30%;
+  height:20%;
+  color:white;
+  font-size:x-large;
+  right:0px;
+  background-color:blue;
+  }
+  
+  #savedData{
+  position:absolute;
+  background-color:green;
+  width:30%;
+  height:20%;
+  bottom:0%;
+  right:0px;
+  color:white;
+  font-size:x-large;
+  }
+  
+  input:focus {
+  background-color:lightblue;
+  }
+  
+  #orehBtns {
+  display:flex;
+  position:absolute;
+  right:0px;
+  top:0px;
+  width:30%;
+  height:60%;
+  background-color:black;
+  justify-content:space-around;
+  flex-direction:column;
+  }
+  
+  #orehBtns > button  {
+  height:20%;
+  width:100%;
+  font-size:large
+  }
+  
+  #orehBtns > button:active  {
+  background-color:yellow;
+  }
+  
+  #deleteLast{
+  order:3;
+  }
+  
+  #clearSaved{
+  order:2;
+  }
+  
+  #listOreh  {
+  margin:0px;
+  }
+  
+  li { 
+  color:white;
+  font-size:large;
+  }
+  
+  ol {
+  padding:20px;
+  background-color:navy;
+  }
+  
+  #graficSheerit{
+  display:flex;
+  position:absolute;
+  bottom:3%;
+  width:100%;
+  height:20%;
+  background-color:white;
+  justify-content:flex-end;
+  }
+  
+  #graficSheerit > div {
+  height:80%;
+  border:1px solid red;
+  color:white;
+  }
+  
+  #piceLeftIn {
+  background-color:orange;
+  }
+  
+  #widthAll {
+  background-color:silver;
+  }
+  
+  #piceRightIn {
+  background-color:blue;
+  }
+  
+  #sheeritButtons {
+   display:flex;
+   position:absolute;
+   bottom:0%;
+   width:100%;
+   height:10%;;
+  }
+  
+  #sheeritButtons > button {
+  height:"30%";
+  background-color:green;
+  font-size:large;
+  flex-grow:1;
+  }
+  
+  #sheeritButtons > button:focus{
+  color:white;
+  flex-grow:4;
+  }
+  
+  #mainDiv{
+  position:absolute;
+  bottom:5%;
+  height:30%;
+  width:100%;
+  display:flex;
+  align-items:center;
+  }
+  
+   #sheeritTable tr:focus {
+   background-color:blue;
+  }  
+  
+  #sheeritTable  {
+  position:absolute;
+  top:10px;
+  width:100%;
+  height:50%;
+  background-color:aqua;
+  font-size:large;
+  }
+  
+  #badSec{
+  display:none;
+   position:absolute;
+   top:0%;
+   left:0%;
+   width:100%;
+   height:100%;
+   background-color:silver;
+   z-index:1;
+   opacity:1;
+   overflow:auto;
+  }
+  
+  #exitMenuBadBtn{
+  position:absolute;
+  top:0px;
+  padding: 5px;
+  margin: 5px;
+  right:0px;
+  background-color:red;
+  font-size: x-large;
+  }
+  
+  #badListTable > tr {
+  color:white;
+  }
+  
+  
+  #badListTable  th , #clientList th {
+  color:white;
+  text-align: left;
+  font-size: x-large;
+  color: red;
+  }
+  
+  #DataEnter{
+  position:absolute;
+  bottom:0px;
+  background-color:red;
+  width:100%
+  }
+  
+  #DataEnter > input{
+  width:25%;
+  }
+  
+  #badListDiv{
+  top:10%;
+  position:absolute;
+   overflow:auto;
+   width:100%;
+   height:70%;
+   background-color:yellow;
+   border:5px solid black;
+  }
+  
+  #badListTable  {
+  position:absolute;
+  top:0%;
+  width:100%;
+  background-color:goldenrod;
+  color:white;
+  font-size:large;
+  }
+  
+  #DataEnter button{
+  width:20%;
+  font-size:large;
+  height:10%;
+  }
+  
+  #client {
+  background-color:rgba(165, 42, 42, 0.356);
+  }
+  
+  #clientSec{
+   display:none;
+   position:absolute;
+   top:0%;
+   left:0%;
+   width:100%;
+   height:100%;
+   background-color:silver;
+   z-index:1;
+   opacity:1;
+   overflow:auto;
+  }
+  
+  #exitClientBtn{
+      position:absolute;
+  top:0px;
+  padding: 5px;
+  margin: 5px;
+  right:0px;
+  background-color:red;
+  font-size: x-large
+  }
+  
+  #clientList > tr {
+  color:white;
+  }
+  
+  #EditShowClient{
+  position:absolute;
+  bottom:0px;
+  background-color:red;
+  width: 100%;
+  }
+  
+  #EditShowClient  > input{
+  width:25%;
+  }
+  
+  #clientDiv{
+  top:10%;
+  position:absolute;
+   overflow:auto;
+   width:100%;
+   height:70%;
+   background-color:yellow;
+   border:5px solid black;
+  }
+  
+  #clientList{
+  position:absolute;
+  top:0%;
+  width:100%;
+  background-color:goldenrod;
+  color:white;
+  font-size:large;
+  /*height:80%; */
+  }
+  
+  #EditShowClient  button{
+  width:20%;
+  font-size:large;
+  height:10%;
+  }
+  
+  #client {
+  background-color:brown;
+  }
+  
+  #opthionData {
+  position:absolute;
+  display:none;
+  width:33%;
+  height:20%;
+  z-index:2;
+  bottom:10%;
+  background-color:blue;
+  }
+  
+  #exitOpthionData {
+  position:absolute;
+  top:0px;
+  right:0px;
+  color:red;
+  font-size:x-large;
+  }
+  
+  #showSavedData{
+  position:absolute;
+  top:0%;
+  left:0%;
+  width:100%;
+  height:50%;
+  font-size:large;
+  border:3px solid red;
+  }
+  
+  #saveDataBtn{
+  position:absolute;
+  top:50%;
+  left:0%;
+  width:100%;
+  height:50%;
+  font-size:large;
+  border:3px solid red;
+  }
+  
+  #exitMenu{
+  position:absolute;
+  top:0px;
+  right:0px;
+  color:red;
+  font-size:x-large;
+  margin : 5px;
+  }
+  
+  #orderSavedData  {
+  position:absolute;
+  top:10%;
+  height:0%;
+  width:0%;
+  overflow:auto;
+  background-color:red;
+  color:white;
+  }
+  
+  #orderData{
+   position:absolute;
+   display:none;
+   width:100%;
+   height:100%;
+   z-index:2;
+   bottom:0%;
+   background-color:yellow;
+  }
+  opthionDiv{
+      display: flex;
+  }
